--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,27 +1,11 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: Location
 metadata:
-  name: backstage
-  description: |
-    Backstage is an open-source developer portal that puts the developer experience first.
-  links:
-    - title: Website
-      url: http://backstage.io
-    - title: Documentation
-      url: https://backstage.io/docs
-    - title: Storybook
-      url: https://backstage.io/storybook
-    - title: Discord Chat
-      url: https://discord.com/invite/EBHEGzX
-  annotations:
-    github.com/project-slug: backstage/backstage
-    backstage.io/techdocs-ref: dir:.
-    lighthouse.com/website-url: https://backstage.io
+  name: test-service
 spec:
-  type: library
-  owner: CNCF
-  lifecycle: experimental
-  targets:
-    - ./asyncapi.yaml
-    - ./component.yaml
-
+  type: service
+  lifecycle: production
+  owner: loanservices-developers
+  providesApis:
+    - payments-service-openapi
+    - payments-service-asyncapi
